# RAM-Stream-Browser

./: .gitignore  PROGRESS.md  PROJECT_REPORT.md  README.md  context_handoff.md  package-lock.json  package.json
rules/: rules.json
src/: bridge.html  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  protocol.rs  state.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/commands/: cookie.rs  mod.rs  stream.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/mpv/: mod.rs
src-tauri/src/parsers/: mod.rs
src-tauri/src/rules/: mod.rs
src-tauri/src/updater/: mod.rs
src/inject/: preload.js
src/styles/: main.css
tests/: e2e-checklist.md
白皮书/: 视频浏览器想法.txt
