[package]
name = "ram-stream-browser"
version = "0.1.0"
description = "Bilibili-first browser with massive RAM buffering via libmpv"
authors = ["RAM-Stream-Browser"]
edition = "2021"

[lib]
name = "ram_stream_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
